Fixed number, image, and spacing

--- a/style.css
+++ b/style.css
@@ -82,8 +82,9 @@
   article {
     flex-basis: 100%;
   }
-  .address p {
+  .address {
     line-height: 15px;
+    padding-bottom: 30px;
   }
   picture {
     margin: 2rem 0 0 0;
@@ -95,6 +96,9 @@
   }
   picture img {
     border-radius: 10px;
+  }
+  .text-box h3 {
+    margin-top: 0;
   }
   .button {
     display: inline-block;
@@ -114,6 +118,9 @@
     color: #f2f2f2;
     text-align: center;
     border-top: 10px solid #d98555;
+  }
+  footer p {
+    margin: 1rem;
   }
   footer ul {
     list-style-type: none;
@@ -143,6 +150,9 @@
         display: grid;
         grid-template-columns: 1fr 2fr;
         gap: 1rem;
+      }
+      .image-box {
+        padding-top: 0.5rem;
       }
   }
  
@@ -174,6 +184,7 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto auto;
         gap: 1rem;
+        align-items: start;
       }
   }
  
